@@ -122,6 +122,7 @@ Changes in 1.9 (not yet released)
 
 --------------------------
 Changes in 1.8.4
+ - Fix pasting text from X11 applications to Irrlicht. Thanks @est31 for the patch.
  - Tests give now a warning when stabilizing screenshots failed. Aslo trying more often now (a hack as taking screenshots otherwise fails often in windowed mode on some systems).
 
 --------------------------
